components/4.22.x/others/observability-services.md
Camel Components

# Observability Services

**Since Camel 4.9**

The Camel Observability Services provide services for observing the state of Camel. Examples are health and metrics services. Each service configuration is opinionated and abstracts away from implementations, such as OpenTelemetry, Prometheus, or Micrometer. Although the services are primarily intended for the cloud, they can be used in any environment.

## What is observability?

Modern systems (especially distributed ones like Camel) are complex. When something breaks or slows down, you need visibility into what’s happening inside without manually digging into every part. Observability gives you that visibility.

There are 4 different types of observability:

1.  Health (Is the system up and running?)
    
2.  Metrics (Numeric measurements over time.)
    
3.  Tracing (Follows the path of a message as it moves through routes.)
    
4.  Logging (Records of events happening in Camel.)
    

Camel Observability services unifies all the different types of observability, and provides standardized endpoints for each.

## Usage

### Installation

#### Camel Main / Camel JBang

Add the `camel-observability-services` dependency:

```xml
<!-- https://mvnrepository.com/artifact/org.apache.camel/camel-observability-services -->
<dependency>
    <groupId>org.apache.camel</groupId>
    <artifactId>camel-observability-services</artifactId>
    <version>x.x.x</version>
</dependency>
```

The presence of this dependency will provide the following components:

-   camel-health
    
-   camel-management
    
-   camel-micrometer-prometheus
    
-   camel-opentelemetry2
    

> **Note**
> mind that we’re using the `camel-opentelemetry2` implementation which has slight differences from `camel-opentelemetry`.

There’s no need to add any further configuration. Each component will be configured using each own default setting, except the endpoint which will be exposed in `/observe/<service>` by default.

#### Spring Boot

Add the `camel-observability-services-starter` dependency:

```xml
<dependency>
    <groupId>org.apache.camel.springboot</groupId>
    <artifactId>camel-observability-services-starter</artifactId>
</dependency>
```

The starter provides the same observability features but adapted to the Spring Boot runtime:

-   camel-health (via Spring Boot Actuator health indicators)
    
-   camel-management
    
-   camel-micrometer-starter + micrometer-registry-prometheus (via Spring Boot Actuator instead of camel-micrometer-prometheus)
    
-   camel-opentelemetry2-starter
    

In Spring Boot, the metrics scrape endpoint is provided by Spring Boot Actuator and the Prometheus registry, not by `camel-micrometer-prometheus` which is designed for Camel Main’s embedded management server. The starter’s default configuration remaps the Actuator endpoints to the same `/observe/` paths, so the exposed endpoints remain the same.

### Endpoints

The presence of this dependency will expose the following endpoints:

 
| Endpoint | Description |
| --- | --- |
| `/observe/health` | startup probe endpoint |
| `/observe/health/live` | liveness probe endpoint |
| `/observe/health/ready` | readiness probe endpoint |
| `/observe/metrics` | metrics exposed as in Micrometer Prometheus Registry |

The endpoints are exposed in the management port (default `9876`) in order to avoid interfering with the regular business running on any other port.

> **Note**
> the management port is available since version 4.12.0. In previous version the endpoints were exposed in the regular business port (default `8080`).

## Configuration

If you need to customize each of the different components provided within this service, then, you can specify in the `application.properties` each of the configuration as it would be done normally when you provide the individual component.

> **Note**
> The customization of the configuration is available for the Spring Boot runtime since version 4.22.0: the starter contributes its defaults as the lowest precedence property source, so any user-provided configuration overrides them following the standard Spring Boot precedence rules. In earlier versions the starter packaged its defaults in `classpath:/config/application.properties`, which took precedence over the application’s own `application.properties` due to a [known limitation](https://github.com/spring-projects/spring-boot/issues/24688), so the defaults could only be overridden via higher precedence sources such as environment variables or system properties.

## Default logging metrics on shutdown

> **Note**
> feature available since version 4.19.0

The presence of this component will make sure that when the application is shutting down, certain metrics are stored on log of the application in order to be preserved for any future analysis or shared with your log aggregator. This could be a solution to investigate how many exchanges were processed, how many have failed, etc, on an application that has a sudden or even a controlled shutdown. You can think on a cronjob running and being able at any moment to learn certain stats without the need to have your application running to scrape the `/metrics` endpoint.

You can even change `camel.metrics.logMetricsOnShutdown` and `camel.metrics.logMetricsOnShutdownFilters` in order to qualify better this behavior, which defaults to `true` and exchanges, application and jvm memory metrics by default.

### OpenTelemetry configuration

The presence of this component will provide the required instrumentation to easily enable the collection of OpenTelemetry metrics.

### Testing OpenTelemetry collector

If you need a quick way to verify the configuration of OpenTelemetry traces, you can start a local collector by running a Docker service:

```bash
docker run -p 4318:4318 otel/opentelemetry-collector-contrib:0.113.0
```

This service will expose the port `4318` to `localhost` which is the default setting expected by the agent. You can change this configuration accordingly.

#### OpenTelemetry Agent configuration

To collect the metrics exposed by the application, and, depending on the runtime of choice, you will need to start your Camel application with a Java agent. The Java agent goal is to push those metrics to the OpenTelemetry compatible collector server. Follow the instructions provided in [OpenTelemetry Java Agent configuration](opentelemetry2.html#OpenTelemetry-JavaAgent).

### JMX configuration

The presence of this component implies the presence of `camel-management` component. This is in charge to include information about Camel application status in JMX format.

> **Note**
> The presence of this component automatically enables the collection of the JMX metrics. This should be negligible from performance point of view. However, you may want to disable that running the application with `-Dorg.apache.camel.jmx.disabled=true` JVM option.

#### Testing JMX

An easy way to test the JMX configuration is to run a JMX client such as `jconsole`. Execute it from the same machine where the Camel application you want to monitor is running, and you can quickly verify the status of the application (selecting the local process). There is the possibility to [expose the JMX remotely as well](https://docs.oracle.com/javase/tutorial/jmx/remote/jconsole.md).

Exposing remote JMX would require some security setting in place to avoid disclosing sensitive information. Also mind that it may not be suitable for cloud development, i.e., Kubernetes, due to possible limitations within the binary protocols used by the JMX technology. In this case, it is recommended the usage of a JSR 160 compatible Java agent.

#### JMX Agent configuration

When dealing with JMX, you may want to expose the information available via HTTP(S) protocol which would make JMX more suitable to cloud-based development. A possible way to expose the information is to use a JSR 160 compatible Java agent, whose goal is to interact as an adapter interface towards JMX, exposing an HTTP-based service instead.

Follow the instructions provided in [JMX Java Agent configuration](../../../manual/jmx.html#_how_to_use_a_java_agent).